# dyscover-clevy

./: .gitignore  Audio.cpp  CMakeLists.txt  CPackWixPatch.xml  Clevy.cbproj  Clevy.cbproj.local  Clevy.dsk  Clevy.res  Clevy.stat  Clevy101berlin.cbproj.local  Clevy101berlin.cpp  Clevy101berlin.dsk  Clevy101berlin.res  Clevy101berlin.stat  ClevyXE8.cbproj.local  ClevyXE8.cpp  ClevyXE8.dsk  ClevyXE8.res  ClevyXE8.stat  ClevycbprojPostBuild.bat  Data.h  Debug.h  ProjectGroup1.dsk  ProjectGroup1.groupproj  ProjectGroup1.groupproj.local  README.md  Speech.h  twfiles.@@@  vcpkg.json
Frame/: frmLayoutChooserUnit.cpp  frmLayoutChooserUnit.dfm  frmLayoutChooserUnit.h  frmMainUnit.cpp  frmMainUnit.dfm  frmMainUnit.h  frmTrayIconUnit.cpp  frmTrayIconUnit.dfm
Frame/__history/: frmLayoutChooserUnit.dfm.~1~  frmMainUnit.cpp.~107~  frmMainUnit.cpp.~108~  frmMainUnit.cpp.~109~  frmMainUnit.cpp.~110~  frmMainUnit.cpp.~111~  frmMainUnit.cpp.~112~  frmMainUnit.cpp.~113~  frmMainUnit.cpp.~114~  frmMainUnit.cpp.~115~  frmMainUnit.cpp.~116~  frmMainUnit.dfm.~15~  frmMainUnit.dfm.~16~  frmMainUnit.dfm.~17~  frmMainUnit.dfm.~18~  frmMainUnit.dfm.~19~  frmMainUnit.dfm.~20~  frmMainUnit.dfm.~21~  frmMainUnit.dfm.~22~  frmMainUnit.dfm.~23~  frmMainUnit.h.~24~  frmMainUnit.h.~25~  frmMainUnit.h.~26~  frmMainUnit.h.~27~  frmMainUnit.h.~28~  frmMainUnit.h.~29~  frmMainUnit.h.~30~  frmMainUnit.h.~31~  frmMainUnit.h.~32~  frmMainUnit.h.~33~
Frame/model/controllers/: ctlDatabase.cpp  ctlDatabase.h  ctlSelfElevation.cpp
Frame/model/controllers/__history/: ctlSelfElevation.h.~2~
Frame/model/views/: frmReadingPaneUnit.cpp
Frame/model/views/__history/: ReadingPaneUnit.dfm.~1~  ReadingPaneUnit.h.~1~  frmReadingPaneUnit.cpp.~10~  frmReadingPaneUnit.cpp.~11~  frmReadingPaneUnit.cpp.~12~  frmReadingPaneUnit.cpp.~3~  frmReadingPaneUnit.cpp.~4~  frmReadingPaneUnit.cpp.~5~  frmReadingPaneUnit.cpp.~6~  frmReadingPaneUnit.cpp.~7~  frmReadingPaneUnit.cpp.~8~  frmReadingPaneUnit.cpp.~9~  frmReadingPaneUnit.dfm.~10~  frmReadingPaneUnit.dfm.~11~  frmReadingPaneUnit.dfm.~12~  frmReadingPaneUnit.dfm.~13~  frmReadingPaneUnit.dfm.~15~  frmReadingPaneUnit.dfm.~7~  frmReadingPaneUnit.dfm.~8~  frmReadingPaneUnit.dfm.~9~  frmReadingPaneUnit.h.~10~  frmReadingPaneUnit.h.~11~  frmReadingPaneUnit.h.~2~  frmReadingPaneUnit.h.~3~  frmReadingPaneUnit.h.~4~  frmReadingPaneUnit.h.~5~  frmReadingPaneUnit.h.~6~  frmReadingPaneUnit.h.~7~  frmReadingPaneUnit.h.~8~  frmReadingPaneUnit.h.~9~
LokiCpp/common/: Language.cpp  Language.h  Result.cpp  Result.h  Settings.cpp  Settings.h  defines.h
LokiCpp/common/__history/: Language.cpp.~3~  Language.cpp.~4~  Settings.cpp.~10~  Settings.cpp.~1~  Settings.cpp.~2~  Settings.cpp.~3~  Settings.cpp.~4~  Settings.cpp.~5~  Settings.cpp.~6~  Settings.cpp.~7~  Settings.cpp.~8~  Settings.cpp.~9~  defines.h.~1~
LokiCpp/model/views/: frmSplashScreenUnit.cpp  frmSplashScreenUnit.dfm  frmSplashScreenUnit.h
LokiCpp/model/views/__history/: frmSplashScreenUnit.dfm.~1~
__history/: Clevy101berlin.cpp.~1~  Clevy101berlin.cpp.~2~  Clevy101berlin.cpp.~3~  Clevy101berlin.cpp.~4~  Clevy101berlin.cpp.~5~
data/: keys.ly1  keys.ly2  keys.ly2.kwecover
language/: en.lang.json  nl.lang.json
lib/: cfgmgr32.h
lib/imports/: SSFTRSSOLOLib_OCX.dcr  SSFTRSSOLOLib_OCX.h  SSFTRSSOLOLib_TLB.cpp
lib/readSpeak/: librstts.h  librstts_event.h
lib/rstts/: release_notes.txt
lib/rstts/include/: librstts.h  librstts_error.h  librstts_event.h
lib/ve_engine_v2.0.0_win32/doc/: ErrorMessages.xsd  VocalizerLogStrings.enu.xml  ve-language-index.html
lib/ve_engine_v2.0.0_win32/lib/dll/: ve.lib
lib/ve_engine_v2.0.0_win32/lib/static/: ve_omf.lib
lib/ve_engine_v2.0.0_win32/sample/logging/: README.htm  ve_logging.sample-hdr
lib/ve_engine_v2.0.0_win32/sample/platform/: vplatform.vcxproj
lib/ve_engine_v2.0.0_win32/sample/platform/inc/: vcharconv.h  vcritsec.h  vfile.h  vfind.h  vlog.h  vplatform_tchar.h  vstream.h
lib/ve_engine_v2.0.0_win32/sample/platform/src/: vcharconv.c  vfile.c  vfilestore.c  vfind.c  vfindfiles.h  vheap.c  vlog.c  vplatform.c  vstream.c
lib/ve_engine_v2.0.0_win32/sample/read_file/: read_file.vcxproj
lib/ve_engine_v2.0.0_win32/sample/read_file/src/: main.c
lib/ve_engine_v2.0.0_win32/sample/text_nav_read_file/: text_nav_read_file.vcxproj
readSpeak/: WaveOut.cpp  WaveOut.h
readSpeak/classes/: RSpeakTTS.cpp  RSpeakTTS.h
res/: Clevy.rc  ClevyVersionInfo.h.in  Dyscover.rc  License.rtf  VersionInfo.h.in
res/data/tts/data/: Ilse.db  Veerle.db  nl_be.fsa  nl_nl.fsa
res/icons/: ClevyIcon3.icns  ClevyIcon4.icns  ClevyIcon5.icns  ClevyIcon6.icns  Icon.icns  Icon0.icns  Icon1.icns  Icon2.icns
res/lang/: Clevy.pot  README.md  en.po  nl.po  nl_be.po  update.sh
setup/: Common.inc  Setup_Win32.iss  build.bat
src/: App.cpp  App.h  Audio.cpp  Audio.h  AudioLevel.cpp  AudioLevel.h  Clevy.cpp  Config.cpp  Config.h  Core.cpp  Core.h  Data.cpp  Defines.h  DesktopToolbarWindows.cpp  DesktopToolbarWindows.h  Device.cpp  Device.h  DeviceLinux.cpp  DeviceLinux.h  DeviceWindows.cpp  DeviceWindows.h  Helpers.cpp  IKeyEventListener.h  Keyboard.cpp  Keyboard.h  KeyboardLinux.cpp  KeyboardLinux.h  KeyboardMac.cpp  KeyboardMac.h  KeyboardWindows.cpp  KeyboardWindows.h  Keys.cpp  Keys.h  Language.cpp  LicensingDemo.cpp  LicensingDemo.h  PreferencesDialog.cpp  PreferencesDialog.h  Queue.h  ResourceLoader.cpp  (+10 more)
src/UI/: frmMainUnit.cpp  frmMainUnit.h  frmReadingPaneUnit.dfm  frmTrayIconUnit.h
unused/: Clevy.cbproj  ClevycbprojPostBuild.bat  Debug.cpp  Helpers.h  Language.cpp  Language.h  Settings.cpp  Settings.h  ctlDatabase.cpp  ctlSelfElevation.h
unused/UI/: frmMainUnit.cpp  frmReadingPaneUnit.h  frmTrayIconUnit.cpp
unused/lib/imports/: SSFTRSSOLOLib_OCX.cpp  SSFTRSSOLOLib_TLB.h
unused/lib/readSpeak/: librstts-2.lib
unused/lib/ve_engine_v2.0.0_win32/doc/: VocalizerErrors.xsl  ve_engine-release-note_v2.0.0_win32.html
unused/lib/ve_engine_v2.0.0_win32/inc/: ve_platform.h  ve_ttsapi.h
unused/lib/ve_engine_v2.0.0_win32/test_sapi/: ve_sapi.reg  ve_sapi_wow64.reg
unused/setup/: Setup_Win64.iss
(+273 files in other folders)
